k8s/serving/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving-service          
  namespace: breast-cancer
spec:
  type: ClusterIP               
  selector:
    app: breast-cancer-serving
  ports:
    - protocol: TCP
      port: 80                 
      targetPort: 8000
