k8s/serving/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serving-ingress
  namespace: breast-cancer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /ml/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: serving-service
                port:
                  number: 80
